# auto-manager

./: .env.example  .gitignore  LICENSE  PAPER.md  README.md  docker-compose.prod.yml  docker-compose.yml  docker-manage.sh
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: __init__.py  auth.py  chat.py  companies.py  dashboard.py  health.py
backend/app/core/: __init__.py  config.py  database.py  errors.py  logging.py
backend/app/models/: __init__.py  base.py  company.py  conversation.py  user.py
backend/app/services/: __init__.py  agent.py  agent_tools.py  auth.py  company.py  encryption.py  langgraph_agent.py  llm.py  manager_io.py  ocr.py  workflows.py
backend/scripts/: .env.test.example  README.md  manager_openapi.json  test_agent_tools_integration.py  test_all_endpoints.py  test_crud_operations.py  test_manager_io_api.py  test_manager_openapi.py  test_payment_structure.py
backend/tests/: __init__.py  conftest.py  test_agent_properties.py  test_agent_tools.py  test_auth_endpoints.py  test_auth_properties.py  test_auth_service.py  test_company_properties.py  test_company_service.py  test_dashboard_properties.py  test_infrastructure.py  test_integration.py  test_llm_properties.py  test_manager_io_client.py  test_manager_io_properties.py  test_ocr_properties.py
frontend/: .dockerignore  Dockerfile  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: index.ts
(+52 files in other folders)
